ADO 64: add 'Add to favorite list' UI on MovieCard, resolve added movies by TMDB id
